// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authors renderer should render for one @author tag 1`] = `
<div>
  <div>
    Author
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test author
      </span>
    </li>
  </ul>
</div>
`;

exports[`Authors renderer should render for two @author tags 1`] = `
<div>
  <div>
    Authors
  </div>
  <ul>
    <li>
      <span
        class="base-0-0"
      >
        Test author
      </span>
    </li>
    <li>
      <span
        class="base-0-0"
      >
        <a
          class="a-0-2"
          href="#TestLink"
        >
          Test
        </a>
      </span>
    </li>
  </ul>
</div>
`;
